<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv1"
                android:textColor="@color/colorBoton"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/v1et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et1"
                android:inputType="numberSigned"
                android:textColor="@color/colorBoton"
                android:textColorHint="@color/colorBoton"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv2"
                android:textColor="@color/colorBoton"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/v1et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et2"
                android:inputType="numberSigned"
                android:textColorHint="@color/colorBoton"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/v1btnsuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn1"
                android:textColor="@color/colorBoton"
                android:textSize="20sp" />

            <Button
                android:id="@+id/v1btnresta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn2"
                android:textColor="@color/colorBoton"
                android:textSize="20sp" />

            <Button
                android:id="@+id/v1btnmulti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn3"
                android:textColor="@color/colorBoton"
                android:textSize="20sp" />

            <Button
                android:id="@+id/v1btndivi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn4"
                android:textColor="@color/colorBoton"
                android:textSize="20sp" />

            <Button
                android:id="@+id/v1btnMod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn5"
                android:textColor="@color/colorBoton" />

        </LinearLayout>

        <TextView
            android:id="@+id/v1tvres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBoton"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>